RESOLVED FIXED236129
Fix for non-unified builds after r286821 (245056@main)
https://bugs.webkit.org/show_bug.cgi?id=236129
Summary Fix for non-unified builds after r286821 (245056@main)
Pablo Saavedra
Reported 2022-02-04 00:07:02 PST
SSIA Error: In file included from /home/bot/workspace/sources/wpewebkit/Source/WebCore/workers/shared/SharedWorkerScriptLoader.cpp:27: /home/bot/workspace/sources/wpewebkit/Source/WebCore/workers/shared/SharedWorkerScriptLoader.h:51:5: error: 'SharedWorkerScriptLoaderIdentifier' does not name a type; did you mean 'SharedWorkerScriptLoader'? 51 | SharedWorkerScriptLoaderIdentifier identifier() const { return m_identifier; } | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ | SharedWorkerScriptLoader /home/bot/workspace/sources/wpewebkit/Source/WebCore/workers/shared/SharedWorkerScriptLoader.h:60:11: error: 'SharedWorkerScriptLoaderIdentifier' does not name a type; did you mean 'SharedWorkerScriptLoader'? 60 | const SharedWorkerScriptLoaderIdentifier m_identifier; | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ | SharedWorkerScriptLoader /home/bot/workspace/sources/wpewebkit/Source/WebCore/workers/shared/SharedWorkerScriptLoader.cpp: In constructor 'WebCore::SharedWorkerScriptLoader::SharedWorkerScriptLoader(const WTF::URL&, WebCore::SharedWorker&, WebCore::TransferredMessagePort&&, WebCore::WorkerOptions&&)': /home/bot/workspace/sources/wpewebkit/Source/WebCore/workers/shared/SharedWorkerScriptLoader.cpp:39:7: error: class 'WebCore::SharedWorkerScriptLoader' does not have any field named 'm_identifier' 39 | : m_identifier(SharedWorkerScriptLoaderIdentifier::generate()) | ^~~~~~~~~~~~
Attachments
patch (1.26 KB, patch)
2022-02-04 00:09 PST, Pablo Saavedra
no flags
Pablo Saavedra
Comment 1 2022-02-04 00:09:42 PST
EWS
Comment 2 2022-02-04 00:10:23 PST
Pablo Saavedra
Comment 3 2022-02-04 00:14:18 PST
Radar WebKit Bug Importer
Comment 4 2022-02-04 00:15:18 PST
Pablo Saavedra
Comment 5 2022-02-04 00:17:15 PST
Just for reference, landed as unreviewed patch for the sake of simplicity .
Note You need to log in before you can comment on or make changes to this bug.