Fix for non-unified builds after r286821 (245056@main) https://bugs.webkit.org/show_bug.cgi?id=236129

Unreviewed, fixes missing header.

* workers/shared/SharedWorkerScriptLoader.h:


Canonical link: https://commits.webkit.org/246804@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289107 268f45cc-cd09-0410-ab3c-d52691b4dbfc